[gd_scene load_steps=6 format=2]

[ext_resource path="res://lite/generator/Generator.gd" type="Script" id=1]
[ext_resource path="res://SpanningCamera2D/SpanningCamera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://lite/rule/Rule.tscn" type="PackedScene" id=3]
[ext_resource path="res://lite/rule/RulePlace.tscn" type="PackedScene" id=4]
[ext_resource path="res://lite/rule/RuleTransformKL.tscn" type="PackedScene" id=5]

[node name="Generator" type="Node2D"]
script = ExtResource( 1 )

[node name="Rule" parent="." instance=ExtResource( 3 )]

[node name="RulePlace" parent="." instance=ExtResource( 4 )]

[node name="RuleTransformKL" parent="." instance=ExtResource( 5 )]

[node name="Graphs" type="Node" parent="."]
unique_name_in_owner = true

[node name="Trash" type="Node" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="WindowDialogGenerator" type="WindowDialog" parent="GUI"]
unique_name_in_owner = true
margin_top = -5.0
margin_right = 221.0
margin_bottom = 446.0
window_title = "Generator Graph"

[node name="MarginContainer" type="MarginContainer" parent="GUI/WindowDialogGenerator"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 203.0
margin_bottom = 436.0
custom_constants/separation = 10

[node name="SectionGraph" type="VBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_right = 193.0
margin_bottom = 80.0
custom_constants/separation = 10

[node name="ButtonAddGraph" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph"]
unique_name_in_owner = true
margin_right = 193.0
margin_bottom = 20.0
text = "Create Graph"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph"]
margin_top = 30.0
margin_right = 193.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 17.0
text = "target graph :"

[node name="OptionTargetGraph" type="OptionButton" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer"]
unique_name_in_owner = true
margin_left = 88.0
margin_right = 193.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ButtonDeleteGraph" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 193.0
margin_bottom = 80.0
text = "Delete Graph"

[node name="HSeparator" type="HSeparator" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 193.0
margin_bottom = 94.0

[node name="SectionSingleRule" type="VBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 193.0
margin_bottom = 148.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionSingleRule"]
margin_right = 193.0
margin_bottom = 14.0
text = "single rule :"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionSingleRule"]
margin_top = 24.0
margin_right = 193.0
margin_bottom = 44.0

[node name="OptionSingleRule" type="OptionButton" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionSingleRule/HBoxContainer"]
unique_name_in_owner = true
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "init1"
items = [ "init1", null, false, 0, null, "init2", null, false, 1, null, "extend1", null, false, 2, null, "extend2", null, false, 3, null, "extend3", null, false, 4, null, "secret", null, false, 5, null, "obstacle", null, false, 6, null, "reward", null, false, 7, null, "key&lock1", null, false, 8, null, "key&lock2", null, false, 9, null, "key&lock3", null, false, 10, null, "key&lock4", null, false, 11, null ]
selected = 0

[node name="ButtonExecuteSingleRule" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionSingleRule/HBoxContainer"]
unique_name_in_owner = true
margin_left = 130.0
margin_right = 193.0
margin_bottom = 20.0
text = "execute"

[node name="HSeparator2" type="HSeparator" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 193.0
margin_bottom = 162.0

[node name="SectionRecipe" type="VBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 193.0
margin_bottom = 356.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe"]
margin_right = 193.0
margin_bottom = 14.0
text = "make recipe :"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe"]
margin_top = 24.0
margin_right = 193.0
margin_bottom = 44.0

[node name="OptionRuleRecipe" type="OptionButton" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer"]
unique_name_in_owner = true
margin_right = 154.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "init1"
items = [ "init1", null, false, 0, null, "init2", null, false, 1, null, "extend1", null, false, 2, null, "extend2", null, false, 3, null, "extend3", null, false, 4, null, "secret", null, false, 5, null, "obstacle", null, false, 6, null, "reward", null, false, 7, null, "key&lock1", null, false, 8, null, "key&lock2", null, false, 9, null, "key&lock3", null, false, 10, null, "key&lock4", null, false, 11, null, "randomInit", null, false, 12, null, "randomExtend", null, false, 13, null, "randomKeyLock", null, false, 14, null ]
selected = 0

[node name="ButtonAddRule" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer"]
unique_name_in_owner = true
margin_left = 158.0
margin_right = 193.0
margin_bottom = 20.0
text = "add"

[node name="PanelContainer" type="PanelContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe"]
margin_top = 54.0
margin_right = 193.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="RichTextRecipe" type="RichTextLabel" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/PanelContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 7.0
margin_right = 186.0
margin_bottom = 93.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe"]
margin_top = 164.0
margin_right = 193.0
margin_bottom = 184.0

[node name="ButtonExecuteRecipe" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 94.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "execute"

[node name="ButtonClearRecipe" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 193.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "clear"

[node name="HSeparator3" type="HSeparator" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 193.0
margin_bottom = 370.0

[node name="SectionGeneral" type="VBoxContainer" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 193.0
margin_bottom = 400.0

[node name="ButtonClearAll" type="Button" parent="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGeneral"]
unique_name_in_owner = true
margin_right = 193.0
margin_bottom = 20.0
text = "Reset"

[node name="WindowDialogGraph" type="WindowDialog" parent="GUI"]
unique_name_in_owner = true
visible = true
margin_top = -5.0
margin_right = 221.0
margin_bottom = 446.0
window_title = "Graph Transformer"

[node name="MarginContainer" type="MarginContainer" parent="GUI/WindowDialogGraph"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 203.0
margin_bottom = 436.0
custom_constants/separation = 10

[node name="SectionGraph" type="VBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_right = 193.0
margin_bottom = 50.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph"]
margin_right = 193.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 17.0
text = "target graph :"

[node name="OptionTargetGraph2" type="OptionButton" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer"]
unique_name_in_owner = true
margin_left = 88.0
margin_right = 193.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ButtonGetInfo" type="Button" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph"]
unique_name_in_owner = true
margin_top = 30.0
margin_right = 193.0
margin_bottom = 50.0
text = "Get Info"

[node name="HSeparator" type="HSeparator" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 193.0
margin_bottom = 64.0

[node name="SectionInfo" type="VBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 193.0
margin_bottom = 196.0

[node name="Labelvariation" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_right = 193.0
margin_bottom = 14.0
text = "variation : "

[node name="Labelexploration" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 193.0
margin_bottom = 32.0
text = "exploration : "

[node name="LabelshortesPathLength" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 36.0
margin_right = 193.0
margin_bottom = 50.0
text = "shortesPathLength : "

[node name="LabelstandardShortPath" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 54.0
margin_right = 193.0
margin_bottom = 68.0
text = "standardShortPath : "

[node name="LabelweightDuration" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 193.0
margin_bottom = 86.0
text = "weightDuration : "

[node name="LabeloptionReplay" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 90.0
margin_right = 193.0
margin_bottom = 104.0
text = "optionReplay : "

[node name="Labelfitness" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionInfo"]
unique_name_in_owner = true
margin_top = 108.0
margin_right = 193.0
margin_bottom = 122.0
text = "fitness : "

[node name="HSeparator2" type="HSeparator" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 193.0
margin_bottom = 210.0

[node name="SectionTransform" type="VBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 193.0
margin_bottom = 288.0

[node name="ButtonTransform" type="Button" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform"]
unique_name_in_owner = true
margin_right = 193.0
margin_bottom = 20.0
text = "execute place rule"

[node name="ButtonTransformKeyLock" type="Button" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 193.0
margin_bottom = 44.0
text = "transform key lock"

[node name="ButtonGetMetaData" type="Button" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 193.0
margin_bottom = 68.0
text = "get MetaData"

[node name="HSeparator3" type="HSeparator" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 193.0
margin_bottom = 302.0

[node name="SectionGenerator" type="VBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 193.0
margin_bottom = 360.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGenerator"]
margin_right = 193.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGenerator/HBoxContainer"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
text = "Populate : "

[node name="LineEditPopulation" type="LineEdit" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGenerator/HBoxContainer"]
unique_name_in_owner = true
margin_left = 72.0
margin_right = 193.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "3"

[node name="ButtonDungeon" type="Button" parent="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGenerator"]
margin_top = 28.0
margin_right = 193.0
margin_bottom = 48.0
text = "Generate Dungeon"

[node name="PanelContainer" type="PanelContainer" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -238.0
margin_bottom = 261.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 231.0
margin_bottom = 301.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PanelContainer/MarginContainer"]
margin_right = 224.0
margin_bottom = 294.0

[node name="HBoxContainer3" type="HBoxContainer" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Amount Test : "

[node name="AmounTest" type="LineEdit" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "10"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
text = "Population     : "

[node name="Population" type="LineEdit" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 100.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "3"

[node name="Label2" type="Label" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 224.0
margin_bottom = 70.0
text = "rules"

[node name="OptionRuleRecipeonPanel" type="OptionButton" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 74.0
margin_right = 224.0
margin_bottom = 94.0
size_flags_horizontal = 3
text = "init1"
items = [ "init1", null, false, 0, null, "init2", null, false, 1, null, "extend1", null, false, 2, null, "extend2", null, false, 3, null, "extend3", null, false, 4, null, "secret", null, false, 5, null, "obstacle", null, false, 6, null, "reward", null, false, 7, null, "key&lock1", null, false, 8, null, "key&lock2", null, false, 9, null, "key&lock3", null, false, 10, null, "key&lock4", null, false, 11, null, "randomInit", null, false, 12, null, "randomExtend", null, false, 13, null, "randomKeyLock", null, false, 14, null, "placeRules", null, false, 15, null, "duplicate_key", null, false, 16, null, "duplicate_lock", null, false, 17, null, "move_lock_toward", null, false, 18, null, "move_key_duplicate_backward", null, false, 19, null ]
selected = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 224.0
margin_bottom = 118.0

[node name="ButtonAddRuleonPanel" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 110.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "add"

[node name="ButtonClearRecipeonPanel" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 114.0
margin_right = 224.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "clear"

[node name="PanelContainer" type="PanelContainer" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 224.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="RichTextRecipeonPanel" type="RichTextLabel" parent="GUI/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 93.0
size_flags_vertical = 3
text = "randomInit
randomExtend
randomExtend
randomExtend
randomExtend
secret
obstacle
obstacle
obstacle
reward
reward
randomKeyLock
randomKeyLock
randomKeyLock
randomKeyLock
placeRules
"

[node name="ButtonGenerateDungeon" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 226.0
margin_right = 224.0
margin_bottom = 246.0
text = "generate"

[node name="Restart" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 224.0
margin_bottom = 270.0
text = "restart"

[node name="ButtonUpdate" type="Button" parent="GUI/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 224.0
margin_bottom = 294.0
text = "redraw"

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
zoom = Vector2( 5, 5 )

[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph/ButtonAddGraph" to="." method="_on_ButtonAddGraph_pressed"]
[connection signal="item_selected" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer/OptionTargetGraph" to="." method="_on_OptionTargetGraph_item_selected"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGraph/ButtonDeleteGraph" to="." method="_on_ButtonDeleteGraph_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionSingleRule/HBoxContainer/ButtonExecuteSingleRule" to="." method="_on_ButtonExecuteSingleRule_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer/ButtonAddRule" to="." method="_on_ButtonAddRule_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer2/ButtonExecuteRecipe" to="." method="_on_ButtonExecuteRecipe_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionRecipe/HBoxContainer2/ButtonClearRecipe" to="." method="_on_ButtonClearRecipe_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGenerator/MarginContainer/VBoxContainer/SectionGeneral/ButtonClearAll" to="." method="_on_ButtonClearAll_pressed"]
[connection signal="item_selected" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph/HBoxContainer/OptionTargetGraph2" to="." method="_on_OptionTargetGraph2_item_selected"]
[connection signal="pressed" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGraph/ButtonGetInfo" to="." method="_on_ButtonGetInfo_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform/ButtonTransform" to="." method="_on_ButtonTransform_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform/ButtonTransformKeyLock" to="." method="_on_ButtonTransformKeyLock_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionTransform/ButtonGetMetaData" to="." method="_on_ButtonGetMetaData_pressed"]
[connection signal="pressed" from="GUI/WindowDialogGraph/MarginContainer/VBoxContainer/SectionGenerator/ButtonDungeon" to="." method="_on_ButtonDungeon_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ButtonAddRuleonPanel" to="." method="_on_ButtonAddRuleonPanel_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ButtonClearRecipeonPanel" to="." method="_on_ButtonClearRecipeonPanel_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/ButtonGenerateDungeon" to="." method="_on_ButtonGenerateDungeon_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/PanelContainer/MarginContainer/VBoxContainer/ButtonUpdate" to="." method="_on_ButtonUpdate_pressed"]
